@@ -1,5 +1,12 @@
 1998-08-27  Tanaka Akira      <akr@jaist.ac.jp>
 
+	* ew-var.el (ew-decode-field-syntax-alist): Add few fields.
+
+	* eword-decode.el (eword-decode-header): Compare decoded result
+	to CRLF complemented version of field-body.
+
+1998-08-27  Tanaka Akira      <akr@jaist.ac.jp>
+
 	* ew-dec.el (ew-decode-field-test): Search around current point
 	as default argument when called interactive.
 
